fix: z-index it-nav-wrapper with modals

--- a/src/scss/custom/_header.scss
+++ b/src/scss/custom/_header.scss
@@ -4,7 +4,7 @@
 .it-header-wrapper {
   .it-nav-wrapper {
     position: relative;
-    z-index: 2;
+    z-index: auto;
     // se ha un menu
     .it-brand-wrapper {
       padding-left: $v-gap * 4;
@@ -13,6 +13,7 @@
       transition: padding-top 0.3s ease;
 
       position: absolute;
+      z-index: 2;
       left: 0;
       top: 50%;
       margin-top: -$header-nav-button-distance;
